work/19/77ba3d93afcdd0f30b5d2cd37e8f66/.command.log
Collecting nest
  Downloading nest-1.3.0.tar.gz (655 bytes)
Building wheels for collected packages: nest
  Building wheel for nest (setup.py): started
  Building wheel for nest (setup.py): finished with status 'done'
  Created wheel for nest: filename=nest-1.3.0-py3-none-any.whl size=1286 sha256=a9d3293cf9894cdf3ae6d152d10b6f4e748acf6b33b5fec6b741617313b3ffac
  Stored in directory: /root/.cache/pip/wheels/a0/c2/ee/2dfd5b4b7463e55e6e3523c3475b154d1dfbe2e2900b3d951b
Successfully built nest
Installing collected packages: nest
Successfully installed nest-1.3.0
Traceback (most recent call last):
  File "pyscripts/annotate.py", line 14, in <module>
    from nest.bbduk import QualCheck
  File "/opt/miniconda/envs/gatk/lib/python3.6/site-packages/nest.py", line 4
    if isinstance(each_item, indent = False ,list):
                                            ^
SyntaxError: positional argument follows keyword argument
Error response from daemon: Cannot kill container: nxf-NGPdbNcJ4cT8RuY2YKSYy0Hx: Container 49d9323d48a86cd3757690aa8158f8d0d5778814f1d8898a0bab36f02c0358ed is not running
